# ray-tracing-demo

./: index.html  package.json  rust-toolchain  vite.config.ts
ray-tracing/: Cargo.toml
ray-tracing/src/: camera.rs  canvas.rs  lib.rs  ray.rs  scene.rs  shape.rs  vec.rs
src/: main.ts  style.css  worker.ts
